tests/errors/test_41.x
// Unknown enum key

enum Boolean -> { TRUE, FALSE }

fn main() -> int {
    let x: Boolean = Boolean.MAYBE;
}